--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
       - linkhub-network
 
   # ===========================================
-  # Nginx Reverse Proxy
+  # Nginx Reverse Proxy (Behind LB)
   # ===========================================
   nginx:
     image: nginx:alpine
@@ -53,28 +53,14 @@ services:
     restart: unless-stopped
     ports:
       - "80:80"
-      - "443:443"
     volumes:
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./docker/nginx/ssl:/etc/nginx/ssl:ro
-      - certbot-www:/var/www/certbot:ro
       - uploads:/app/public/uploads:ro
     depends_on:
       - app
       - frontend
     networks:
       - linkhub-network
-
-  # ===========================================
-  # Certbot (SSL Certificate Manager)
-  # ===========================================
-  certbot:
-    image: certbot/certbot:latest
-    container_name: linkhub-certbot
-    volumes:
-      - ./docker/nginx/ssl:/etc/letsencrypt
-      - certbot-www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
   # ===========================================
   # PostgreSQL Database
@@ -126,8 +112,6 @@ volumes:
   uploads:
     driver: local
   logs:
-    driver: local
-  certbot-www:
     driver: local
 
 # ===========================================
