--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,6 +1,8 @@
 # ===========================================
-# Heisenlink - Production Nginx Configuration
+# Heisenlink - Nginx (Behind Load Balancer)
 # ===========================================
+# SSL termination is handled by the Load Balancer.
+# Nginx listens on port 80 only.
 
 worker_processes auto;
 worker_rlimit_nofile 65535;
@@ -21,7 +23,7 @@ http {
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for" '
-                    'rt=$request_time uct=$upstream_connect_time uht=$upstream_header_time urt=$upstream_response_time';
+                    'rt=$request_time urt=$upstream_response_time';
 
     access_log /var/log/nginx/access.log main buffer=16k flush=2m;
 
@@ -37,10 +39,13 @@ http {
     client_body_buffer_size 128k;
     large_client_header_buffers 4 16k;
 
-    # ─── Timeouts ────────────────────────────
-    proxy_connect_timeout 60s;
-    proxy_send_timeout 60s;
-    proxy_read_timeout 60s;
+    # ─── Trust LB Headers ────────────────────
+    # Set real IP from Load Balancer
+    set_real_ip_from 10.0.0.0/8;
+    set_real_ip_from 172.16.0.0/12;
+    set_real_ip_from 192.168.0.0/16;
+    real_ip_header X-Forwarded-For;
+    real_ip_recursive on;
 
     # ─── Gzip Compression ────────────────────
     gzip on;
@@ -70,8 +75,6 @@ http {
     limit_req_zone $binary_remote_addr zone=auth:10m rate=5r/s;
     limit_req_zone $binary_remote_addr zone=redirect:10m rate=50r/s;
     limit_req_zone $binary_remote_addr zone=general:10m rate=30r/s;
-
-    # Custom 429 error page
     limit_req_status 429;
 
     # ─── Proxy Cache ─────────────────────────
@@ -91,48 +94,20 @@ http {
         keepalive 16;
     }
 
-    # ─── HTTP → HTTPS Redirect ───────────────
+    # ─── Main Server (HTTP behind LB) ────────
     server {
         listen 80;
         server_name _;
-
-        # Let's Encrypt ACME challenge
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-            allow all;
-        }
-
-        # Redirect all HTTP to HTTPS
-        location / {
-            return 301 https://$host$request_uri;
-        }
-    }
-
-    # ─── Main HTTPS Server ───────────────────
-    server {
-        listen 443 ssl http2;
-        server_name _;
-
-        # ── SSL Configuration ────────────────
-        ssl_certificate /etc/nginx/ssl/fullchain.pem;
-        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_prefer_server_ciphers on;
-        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
-        ssl_session_cache shared:SSL:10m;
-        ssl_session_timeout 10m;
-        ssl_session_tickets off;
-        ssl_stapling on;
-        ssl_stapling_verify on;
 
         # ── Security Headers ─────────────────
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
         add_header Permissions-Policy "camera=(), microphone=(), geolocation=()" always;
-        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self'" always;
+
+        # HSTS (LB forwards original proto via X-Forwarded-Proto)
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
         # ── Health Check ─────────────────────
         location /health {
@@ -140,6 +115,13 @@ http {
             proxy_pass http://backend;
             proxy_http_version 1.1;
             proxy_set_header Connection "";
+        }
+
+        # ── LB Health Check ──────────────────
+        location = /nginx-health {
+            access_log off;
+            return 200 "ok";
+            add_header Content-Type text/plain;
         }
 
         # ── API Routes ───────────────────────
@@ -151,8 +133,12 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
             proxy_set_header Connection "";
+
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
         }
 
         # ── Auth Routes (stricter rate limit) ─
@@ -164,7 +150,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
             proxy_set_header Connection "";
         }
 
@@ -175,7 +161,7 @@ http {
             add_header Cache-Control "public, immutable";
             add_header X-Content-Type-Options "nosniff" always;
 
-            # Security: restrict file types
+            # Block executable files
             location ~* \.(php|sh|bash|cgi|pl|py)$ {
                 deny all;
                 return 403;
@@ -224,7 +210,7 @@ http {
             access_log off;
         }
 
-        # ── Dashboard (Next.js frontend) ─────
+        # ── Dashboard (Next.js) ──────────────
         location /dashboard {
             limit_req zone=general burst=30 nodelay;
 
@@ -233,19 +219,19 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
         }
 
-        # ── Auth Pages (Next.js frontend) ────
+        # ── Auth Pages (Next.js) ─────────────
         location /login {
             proxy_pass http://frontend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
         }
@@ -256,12 +242,12 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
         }
 
-        # ── Error Pages ──────────────────────
+        # ── Error Pages (Next.js) ────────────
         location /link-inactive {
             proxy_pass http://frontend;
             proxy_http_version 1.1;
@@ -291,17 +277,15 @@ http {
         }
 
         # ── Shortlink Redirects (fallback) ───
-        # All remaining paths go to backend for shortlink resolution
         location / {
             limit_req zone=redirect burst=100 nodelay;
 
-            # Try frontend first for Next.js pages, fall back to backend for shortlinks
             proxy_pass http://backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
             proxy_set_header Connection "";
 
             # Cache redirects briefly
@@ -320,98 +304,4 @@ http {
             return 404;
         }
     }
-
-    # ─── HTTP-only Fallback (no SSL) ─────────
-    # Use this server block if SSL is not yet configured.
-    # Comment out the HTTPS server above and uncomment this.
-    #
-    # server {
-    #     listen 80;
-    #     server_name _;
-    #
-    #     # Security headers
-    #     add_header X-Frame-Options "SAMEORIGIN" always;
-    #     add_header X-Content-Type-Options "nosniff" always;
-    #     add_header X-XSS-Protection "1; mode=block" always;
-    #     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    #
-    #     # Health check
-    #     location /health {
-    #         access_log off;
-    #         proxy_pass http://backend;
-    #         proxy_http_version 1.1;
-    #         proxy_set_header Connection "";
-    #     }
-    #
-    #     # API routes
-    #     location /api/ {
-    #         limit_req zone=api burst=20 nodelay;
-    #         proxy_pass http://backend;
-    #         proxy_http_version 1.1;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #         proxy_set_header Connection "";
-    #     }
-    #
-    #     # Static uploads
-    #     location /uploads/ {
-    #         alias /app/public/uploads/;
-    #         expires 30d;
-    #         add_header Cache-Control "public, immutable";
-    #     }
-    #
-    #     # Next.js static assets
-    #     location /_next/static/ {
-    #         proxy_pass http://frontend;
-    #         expires 365d;
-    #         add_header Cache-Control "public, immutable";
-    #     }
-    #
-    #     # Dashboard
-    #     location /dashboard {
-    #         proxy_pass http://frontend;
-    #         proxy_http_version 1.1;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #         proxy_set_header Upgrade $http_upgrade;
-    #         proxy_set_header Connection "upgrade";
-    #     }
-    #
-    #     # Auth pages
-    #     location /login {
-    #         proxy_pass http://frontend;
-    #         proxy_http_version 1.1;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header Upgrade $http_upgrade;
-    #         proxy_set_header Connection "upgrade";
-    #     }
-    #
-    #     location /register {
-    #         proxy_pass http://frontend;
-    #         proxy_http_version 1.1;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header Upgrade $http_upgrade;
-    #         proxy_set_header Connection "upgrade";
-    #     }
-    #
-    #     # Shortlink redirects (fallback)
-    #     location / {
-    #         limit_req zone=redirect burst=100 nodelay;
-    #         proxy_pass http://backend;
-    #         proxy_http_version 1.1;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #         proxy_set_header Connection "";
-    #     }
-    #
-    #     # Block sensitive paths
-    #     location ~ /\. { deny all; }
-    #     location ~ ^/(\.env|docker|prisma|node_modules) { deny all; return 404; }
-    # }
 }
