--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -90,14 +90,14 @@ http {
     }
 
     upstream frontend {
-        server frontend:3001;
+        server frontend:3000;
         keepalive 16;
     }
 
     # ─── Main Server (HTTP behind LB) ────────
     server {
         listen 80;
-        server_name _;
+        server_name s.menpan.go.id;
 
         # ── Security Headers ─────────────────
         add_header X-Frame-Options "SAMEORIGIN" always;
