--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -1,15 +1,17 @@
 # ===========================================
 # Heisenlink - Next.js Frontend Dockerfile
 # ===========================================
+# syntax=docker/dockerfile:1
 
 FROM node:20-alpine AS base
 
-# Install dependencies
+# Install dependencies (cached separately)
 FROM base AS deps
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm ci
+RUN --mount=type=cache,target=/root/.npm \
+    npm ci
 
 # Build the Next.js application
 FROM base AS builder
@@ -21,9 +23,10 @@ COPY . .
 # Ensure public dir exists
 RUN mkdir -p public
 
-# Build Next.js
+# Build Next.js with cache
 ENV NEXT_TELEMETRY_DISABLED=1
-RUN npm run build
+RUN --mount=type=cache,target=/app/.next/cache \
+    npm run build
 
 # Production runner
 FROM base AS runner
@@ -36,7 +39,7 @@ ENV NEXT_TELEMETRY_DISABLED=1
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
-# Ensure public dir exists and copy assets
+# Copy only what's needed
 RUN mkdir -p public
 COPY --from=builder /app/public ./public
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
@@ -44,12 +47,12 @@ COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
 USER nextjs
 
-EXPOSE 3001
+EXPOSE 3000
 
-ENV PORT=3001
+ENV PORT=3000
 ENV HOSTNAME="0.0.0.0"
 
 HEALTHCHECK --interval=30s --timeout=3s --start-period=10s --retries=3 \
-    CMD wget --no-verbose --tries=1 --spider http://localhost:3001/ || exit 1
+    CMD wget --no-verbose --tries=1 --spider http://127.0.0.1:3000/ || exit 1
 
 CMD ["node", "server.js"]
