fix: handle login ldap

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -40,7 +40,6 @@ http {
     large_client_header_buffers 4 16k;
 
     # ─── Trust LB Headers ────────────────────
-    # Set real IP from Load Balancer
     set_real_ip_from 10.0.0.0/8;
     set_real_ip_from 172.16.0.0/12;
     set_real_ip_from 192.168.0.0/16;
@@ -73,7 +72,6 @@ http {
     # ─── Rate Limiting Zones ─────────────────
     limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
     limit_req_zone $binary_remote_addr zone=auth:10m rate=5r/s;
-    limit_req_zone $binary_remote_addr zone=redirect:10m rate=50r/s;
     limit_req_zone $binary_remote_addr zone=general:10m rate=30r/s;
     limit_req_status 429;
 
@@ -105,16 +103,18 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
         add_header Permissions-Policy "camera=(), microphone=(), geolocation=()" always;
-
-        # HSTS (LB forwards original proto via X-Forwarded-Proto)
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
-        # ── Health Check ─────────────────────
-        location /health {
+        # ── Block Sensitive Paths (first!) ───
+        location ~ /\. {
+            deny all;
             access_log off;
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Connection "";
+            log_not_found off;
+        }
+
+        location ~ ^/(\.env|docker|prisma|node_modules|\.git) {
+            deny all;
+            return 404;
         }
 
         # ── LB Health Check ──────────────────
@@ -124,7 +124,28 @@ http {
             add_header Content-Type text/plain;
         }
 
-        # ── API Routes ───────────────────────
+        # ── Backend Health Check ─────────────
+        location = /health {
+            access_log off;
+            proxy_pass http://backend;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+        }
+
+        # ── API Auth (stricter rate limit) ───
+        location /api/auth/ {
+            limit_req zone=auth burst=10 nodelay;
+
+            proxy_pass http://backend;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+            proxy_set_header Connection "";
+        }
+
+        # ── API Routes → Backend ─────────────
         location /api/ {
             limit_req zone=api burst=20 nodelay;
 
@@ -141,19 +162,6 @@ http {
             proxy_read_timeout 60s;
         }
 
-        # ── Auth Routes (stricter rate limit) ─
-        location /api/auth/ {
-            limit_req zone=auth burst=10 nodelay;
-
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
-            proxy_set_header Connection "";
-        }
-
         # ── Static Uploads ───────────────────
         location /uploads/ {
             alias /app/public/uploads/;
@@ -161,7 +169,6 @@ http {
             add_header Cache-Control "public, immutable";
             add_header X-Content-Type-Options "nosniff" always;
 
-            # Block executable files
             location ~* \.(php|sh|bash|cgi|pl|py)$ {
                 deny all;
                 return 403;
@@ -193,25 +200,14 @@ http {
             proxy_cache_valid 200 60m;
         }
 
-        # ── Favicon & Robots ─────────────────
-        location = /favicon.ico {
-            proxy_pass http://frontend;
-            proxy_http_version 1.1;
-            proxy_set_header Connection "";
-            expires 7d;
-            access_log off;
-        }
-
-        location = /robots.txt {
-            proxy_pass http://frontend;
-            proxy_http_version 1.1;
-            proxy_set_header Connection "";
-            expires 1d;
-            access_log off;
-        }
-
-        # ── Dashboard (Next.js) ──────────────
-        location /dashboard {
+        # ── Everything Else → Frontend ───────
+        # Frontend (Next.js) handles ALL pages:
+        #   - Homepage (/)
+        #   - Dashboard (/dashboard)
+        #   - Login/Register (/login, /register)
+        #   - Shortlink slugs (/abc123) via [slug]/page.tsx
+        #   - Error pages (/link-expired, /too-many-requests, etc)
+        location / {
             limit_req zone=general burst=30 nodelay;
 
             proxy_pass http://frontend;
@@ -222,86 +218,6 @@ http {
             proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
-        }
-
-        # ── Auth Pages (Next.js) ─────────────
-        location /login {
-            proxy_pass http://frontend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
-
-        location /register {
-            proxy_pass http://frontend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
-
-        # ── Error Pages (Next.js) ────────────
-        location /link-inactive {
-            proxy_pass http://frontend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header Connection "";
-        }
-
-        location /link-expired {
-            proxy_pass http://frontend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header Connection "";
-        }
-
-        location /too-many-requests {
-            proxy_pass http://frontend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header Connection "";
-        }
-
-        location /forbidden {
-            proxy_pass http://frontend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header Connection "";
-        }
-
-        # ── Shortlink Redirects (fallback) ───
-        location / {
-            limit_req zone=redirect burst=100 nodelay;
-
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
-            proxy_set_header Connection "";
-
-            # Cache redirects briefly
-            proxy_cache_valid 301 302 1m;
-        }
-
-        # ── Block Sensitive Paths ────────────
-        location ~ /\. {
-            deny all;
-            access_log off;
-            log_not_found off;
-        }
-
-        location ~ ^/(\.env|docker|prisma|node_modules|\.git) {
-            deny all;
-            return 404;
         }
     }
 }
